# jwt-auth-example

./: .env  .env-access-token-test  .env-refresh-token-test  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
configurations/: Cargo.toml
configurations/src/: lib.rs  password.rs  session.rs  settings.rs  tokens.rs
domains/: Cargo.toml
domains/src/models/: base.rs  mod.rs  refresh_tokens.rs  users.rs
domains/src/repositories/: users.rs
hashed-password/: Cargo.toml
hashed-password/src/: lib.rs
infrastructures/: Cargo.toml
infrastructures/src/repositories/: mod.rs  refresh_tokens.rs  users.rs
middlewares/: Cargo.toml
middlewares/src/: lib.rs
migrations/: 20220623061944_create_user_table.sql.up.sql  20220630064439_create_refresh_tokens_table.up.sql
miscellaneous/: Cargo.toml
miscellaneous/src/: lib.rs
routes/: Cargo.toml
routes/src/: accounts.rs  auth.rs  health_check.rs  lib.rs  protected_resource.rs  responses.rs
scripts/: integration_tests.sh  run_containers.sh
telemetries/: Cargo.toml
tests/: Cargo.toml
tests/src/: health_check.rs  helpers.rs  test_auth.rs  test_health_check.rs  test_helpers.rs
tests/tests/: accounts.rs  auth.rs  health_check.rs  helpers.rs  lib.rs  protected_resource.rs  users.rs
tests/tests/accounts/: change_password.rs  login.rs  logout.rs  mod.rs  signup.rs
usecases/: Cargo.toml
usecases/src/: accounts.rs  auth.rs
web-server/: Cargo.toml
web-server/src/: configurations.rs  lib.rs  main.rs  startup.rs
