[package]
name = "configurations"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4.1"
anyhow = "1.0"
dotenvy = "0.15"
once_cell = "1.12"
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.1", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]
