[package]
name = "configurations"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4.1"
anyhow = "1.0"
argon2 = { version = "0.4", features = ["std"] }
dotenvy = "0.15"
hmac = "0.12"
jwt = "0.16"
once_cell = "1.12"
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.1", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]

[dev-dependencies]
miscellaneous = { path = "../miscellaneous" }
