[package]
name = "domains"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hashed-password = { path = "../hashed-password" }
secrecy = "0.8.0"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }
validator = { version = "0.15", features = ["derive"] }
