[package]
name = "hashed-password"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.4", features = ["std"] }
hmac = "0.12"
jwt = "0.16"
secrecy = "0.8.0"
sha2 = "0.10"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0"
uuid = { version = "1.1", features = ["v4"] }
