[package]
name = "middlewares"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1"
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
configurations = { path = "../configurations" }
domains = { path = "../domains" }
infrastructures = { path = "../infrastructures" }
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }


[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]
