[package]
name = "routes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
usecases = { path = "../usecases" }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]
