[package]
name = "tests"
version = "0.1.0"
autotests = false
autobenches = false
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
actix-web = "4.1"
configurations = { path = "../configurations" }
cookie_store = "0.16"
domains = { path = "../domains" }
dotenvy = "0.15"
once_cell = "1.12"
# redis = "0.21"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies"
] }
reqwest_cookie_store = "0.3"
routes = { path = "../routes" }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.1", features = ["v4"] }
web-server = { path = "../web-server" }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time", "migrate", "offline"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
