[package]
name = "usecases"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
configurations = { path = "../configurations" }
domains = { path = "../domains" }
hashed-password = { path = "../hashed-password" }
infrastructures = { path = "../infrastructures" }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]
