[package]
name = "usecases"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
configurations = { path = "../configurations" }
domains = { path = "../domains" }
infrastructures = { path = "../infrastructures" }
miscellaneous = { path = "../miscellaneous" }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]
