[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1"
anyhow = "1.0"
domains = { path = "../domains" }
dotenvy = "0.15"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
