[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4.1"
anyhow = "1.0"
configurations = { path = "../configurations" }
dotenvy = "0.15"
middlewares = { path = "../middlewares" }
once_cell = "1.12"
routes = { path = "../routes" }
secrecy = "0.8.0"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
time = "0.3"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]
